--- a/homeworks/HW01/HW01.ipynb
+++ b/homeworks/HW01/HW01.ipynb
@@ -13,12 +13,12 @@
    "id": "f1264bfb",
    "metadata": {},
    "source": [
-    "##**1** Создание одномерного массива"
+    "##**1 Задание.** Создание одномерных массивов"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 100,
    "id": "362de958",
    "metadata": {},
    "outputs": [
@@ -44,12 +44,12 @@
    "id": "63a8cce5",
    "metadata": {},
    "source": [
-    "##**2** Двумерный массив, заполненный нулями"
+    "##**2 Задание.** Двумерный массив, заполненный нулями"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 101,
    "id": "eeb06269",
    "metadata": {},
    "outputs": [
@@ -74,12 +74,12 @@
    "id": "05df3ce7",
    "metadata": {},
    "source": [
-    "##**3** Двумерный массив, заполненный единицами"
+    "##**3 Задание.** Двумерный массив, заполненный единицами"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 102,
    "id": "194a4f47",
    "metadata": {},
    "outputs": [
@@ -104,12 +104,12 @@
    "id": "9ccb3e3b",
    "metadata": {},
    "source": [
-    "##**4** Одномерный массив,(с помощью arange)"
+    "##**4 Задание.** Одномерный массив,(с помощью arange)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 103,
    "id": "e44cc91d",
    "metadata": {},
    "outputs": [
@@ -132,12 +132,12 @@
    "id": "7fe71dd5",
    "metadata": {},
    "source": [
-    "##**5** Форма данных для массива array_3"
+    "##**5 Задание.** Форма данных для массива array_3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 104,
    "id": "9e4dc756",
    "metadata": {},
    "outputs": [
@@ -158,12 +158,12 @@
    "id": "fcf8fa22",
    "metadata": {},
    "source": [
-    "##**6**Тип данных для массива array_3"
+    "##**6 Задание.**Тип данных для массива array_3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 105,
    "id": "12c08ba8",
    "metadata": {},
    "outputs": [
@@ -184,12 +184,12 @@
    "id": "685f0140",
    "metadata": {},
    "source": [
-    "##**7**Вывод первого и второго элемента массива array_4"
+    "##**7 Задание.**Вывод первого и второго элемента массива array_4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 106,
    "id": "ab32e4e0",
    "metadata": {},
    "outputs": [
@@ -214,12 +214,12 @@
    "id": "a80963ee",
    "metadata": {},
    "source": [
-    "##**8** Нахождение 5-ого элемента массива array_4 (индексирование)"
+    "##**8 Задание.** Нахождение 5-ого элемента массива array_4 (индексирование)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 107,
    "id": "4cbe2740",
    "metadata": {},
    "outputs": [
@@ -241,12 +241,12 @@
    "id": "71bd14e2",
    "metadata": {},
    "source": [
-    "##**9** Срез с первого по 23(включительно) элемент с шагом 3"
+    "##**9 Задание.** Срез с первого по 21 (не включительно) элемент с шагом 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 126,
    "id": "de1d84f7",
    "metadata": {},
    "outputs": [
@@ -254,12 +254,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1  4  7 10 13 16 19 22]\n"
+      "[ 1  4  7 10 13 16 19]\n"
      ]
     }
    ],
    "source": [
-    "slice_of_array = array_4[0:23:3]\n",
+    "slice_of_array = array_4[0:21:3]\n",
     "print(slice_of_array)"
    ]
   },
@@ -268,12 +268,12 @@
    "id": "4dec28bd",
    "metadata": {},
    "source": [
-    "##**10** Поэлементное суммирование массивов"
+    "##**10 Задание.** Поэлементное суммирование массивов"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 119,
    "id": "e66750dc",
    "metadata": {},
    "outputs": [
@@ -295,12 +295,12 @@
    "id": "c34b0508",
    "metadata": {},
    "source": [
-    "##**11** Поэлементное умножение массивов"
+    "##**11 Задание.** Поэлементное умножение массивов"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 110,
    "id": "f8df9118",
    "metadata": {},
    "outputs": [
@@ -322,12 +322,12 @@
    "id": "5285fe7e",
    "metadata": {},
    "source": [
-    "##**12** Нахождение среднего значения массива"
+    "##**12 Задание.** Нахождение среднего значения массива"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 111,
    "id": "92956346",
    "metadata": {},
    "outputs": [
@@ -349,12 +349,12 @@
    "id": "e7d4fbd5",
    "metadata": {},
    "source": [
-    "##**13** Нахождение медианного значения массива"
+    "##**13 Задание.** Нахождение медианного значения массива"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 112,
    "id": "338beb4a",
    "metadata": {},
    "outputs": [
@@ -370,6 +370,91 @@
     "median_value = np.median(array_1_1)\n",
     "np.median(array_1_1)\n",
     "print(median_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e25a0b6",
+   "metadata": {},
+   "source": [
+    "##**14 Задание.** Перевод 90 градусов в радианы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "59d36539",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5707963267948966\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "angle_in_radians = math.pi/2 \n",
+    "print(angle_in_radians)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b69af18",
+   "metadata": {},
+   "source": [
+    "##**15 Задание.** Перевод из радиан в граддусы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "a4599b20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "angle_in_degrees = angle_in_radians * 180 / math.pi\n",
+    "print(angle_in_degrees)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c66972e3",
+   "metadata": {},
+   "source": [
+    "##**16 Задание.** Перевод из градусов в радианы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "8567c920",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5707963267948966"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "angle_to_radians = angle_in_degrees * math.pi / 180 # из градусов в радианы\n",
+    "angle_to_radians "
    ]
   }
  ],
