--- a/homeworks/HW02/HW02.ipynb
+++ b/homeworks/HW02/HW02.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "60db2452",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "\n",
-    "# Создание папки для сохранения графиков по указанному пути\n",
+    "# Создание папки для сохранения графиков\n",
     "figure_path = r'D:\\AI_Courses\\homeworks\\HW02\\figures'\n",
     "os.makedirs(figure_path, exist_ok=True)\n",
     "print(f\"Папка для графиков создана: {figure_path}\")"
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "e9227d2f",
    "metadata": {},
    "outputs": [
@@ -67,18 +67,24 @@
     }
    ],
    "source": [
-    "# Загрузка данных\n",
     "file_path = \"D:\\\\AI_Courses\\\\homeworks\\\\HW02\\\\S02-hw-dataset.csv\"\n",
     "df_homework = pd.read_csv(file_path)\n",
     "\n",
-    "# Проверка успешной загрузки\n",
     "print(\"Данные успешно загружены\")\n",
     "print(f\"Размер датасета: {df_homework.shape}\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10f61224",
+   "metadata": {},
+   "source": [
+    "###**Вывод первых строк датасета**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "id": "d5b50904",
    "metadata": {},
    "outputs": [
@@ -216,20 +222,27 @@
        "9       10   24.0      RU          7      511"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Вывод первых строк датасета\n",
     "print(\"Первые 10 строк датасета:\")\n",
     "df_homework.head(10)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5df247c",
+   "metadata": {},
+   "source": [
+    "###**Информация о столбцах и типах данных**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "id": "79bb63f8",
    "metadata": {},
    "outputs": [
@@ -240,28 +253,36 @@
       "Информация о датасете:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 41 entries, 0 to 40\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column     Non-Null Count  Dtype  \n",
-      "---  ------     --------------  -----  \n",
-      " 0   user_id    41 non-null     int64  \n",
-      " 1   age        39 non-null     float64\n",
-      " 2   country    41 non-null     object \n",
-      " 3   purchases  41 non-null     int64  \n",
-      " 4   revenue    41 non-null     int64  \n",
-      "dtypes: float64(1), int64(3), object(1)\n",
-      "memory usage: 1.7+ KB\n"
+      "Data columns (total 6 columns):\n",
+      " #   Column     Non-Null Count  Dtype   \n",
+      "---  ------     --------------  -----   \n",
+      " 0   user_id    41 non-null     int64   \n",
+      " 1   age        39 non-null     float64 \n",
+      " 2   country    41 non-null     object  \n",
+      " 3   purchases  41 non-null     int64   \n",
+      " 4   revenue    41 non-null     int64   \n",
+      " 5   age_group  38 non-null     category\n",
+      "dtypes: category(1), float64(1), int64(3), object(1)\n",
+      "memory usage: 2.0+ KB\n"
      ]
     }
    ],
    "source": [
-    "# Информация о столбцах и типах данных\n",
     "print(\"Информация о датасете:\")\n",
     "df_homework.info()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "08370cf7",
+   "metadata": {},
+   "source": [
+    "###**Базовые описательные статистики**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "id": "9d7bb2a9",
    "metadata": {},
    "outputs": [
@@ -372,13 +393,12 @@
        "max    40.000000  120.000000  11.000000  2475.000000"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Базовые описательные статистики\n",
     "print(\"Описательные статистики:\")\n",
     "df_homework.describe()"
    ]
@@ -388,12 +408,12 @@
    "id": "ddf3e6d7",
    "metadata": {},
    "source": [
-    "2.3.2. Пропуски, дубликаты и базовый контроль качества"
+    "##**2.3.2.** Пропуски, дубликаты и базовый контроль качества"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "id": "1558c2ba",
    "metadata": {},
    "outputs": [
@@ -425,8 +445,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e69dca2",
+   "metadata": {},
+   "source": [
+    "###**Проверка на дубликаты**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "id": "e7221d42",
    "metadata": {},
    "outputs": [
@@ -437,14 +465,13 @@
       "Анализ дублирующих строк:\n",
       "Количество полных дубликатов: 1\n",
       "Дублирующие строки:\n",
-      "    user_id   age country  purchases  revenue\n",
-      "9        10  24.0      RU          7      511\n",
-      "40       10  24.0      RU          7      511\n"
+      "    user_id   age country  purchases  revenue age_group\n",
+      "9        10  24.0      RU          7      511     18-30\n",
+      "40       10  24.0      RU          7      511     18-30\n"
      ]
     }
    ],
    "source": [
-    "# Проверка дубликатов\n",
     "print(\"Анализ дублирующих строк:\")\n",
     "total_duplicates = df_homework.duplicated().sum()\n",
     "print(f\"Количество полных дубликатов: {total_duplicates}\")\n",
@@ -457,8 +484,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4732d34d",
+   "metadata": {},
+   "source": [
+    "###**Поиск подозрительных значений - возраст**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "id": "af3be757",
    "metadata": {},
    "outputs": [
@@ -478,7 +513,6 @@
     }
    ],
    "source": [
-    "# Поиск подозрительных значений - возраст\n",
     "print(\"Анализ подозрительных значений в возрасте:\")\n",
     "suspicious_age_min = df_homework[df_homework['age'] < 18]\n",
     "suspicious_age_max = df_homework[df_homework['age'] > 100]\n",
@@ -493,8 +527,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd385dad",
+   "metadata": {},
+   "source": [
+    "###**Поиск подозрительных значений - покупки**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "id": "2f9699d8",
    "metadata": {},
    "outputs": [
@@ -516,7 +558,6 @@
     }
    ],
    "source": [
-    "# Поиск подозрительных значений - покупки\n",
     "print(\"Анализ подозрительных значений в покупках:\")\n",
     "suspicious_purchases_negative = df_homework[df_homework['purchases'] < 0]\n",
     "suspicious_zero_revenue = df_homework[(df_homework['purchases'] > 0) & (df_homework['revenue'] == 0)]\n",
@@ -536,8 +577,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab2f113c",
+   "metadata": {},
+   "source": [
+    "###**Текстовое описание проблем качества данных**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "92320590",
    "metadata": {},
    "outputs": [
@@ -576,12 +625,12 @@
    "id": "864b4c39",
    "metadata": {},
    "source": [
-    "2.3.3. Базовый EDA: группировки, агрегаты и частоты"
+    "##**2.3.3.** Базовый EDA: группировки, агрегаты и частоты"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "id": "8fbbca28",
    "metadata": {},
    "outputs": [
@@ -614,8 +663,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7575bd7",
+   "metadata": {},
+   "source": [
+    "###**Группировка с агрегатами по странам**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 74,
    "id": "5b91d87c",
    "metadata": {},
    "outputs": [
@@ -645,7 +702,6 @@
     }
    ],
    "source": [
-    "# Группировка с агрегатами по странам\n",
     "print(\"Статистики по странам:\")\n",
     "country_group_analysis = df_homework.groupby('country').agg({\n",
     "    'age': ['count', 'mean', 'min', 'max'],\n",
@@ -657,8 +713,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f813dba",
+   "metadata": {},
+   "source": [
+    "###**Создание и анализ по возрастным группам**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "id": "8093016b",
    "metadata": {},
    "outputs": [
@@ -707,8 +771,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "720b15be",
+   "metadata": {},
+   "source": [
+    "###**Текстовые наблюдения по EDA**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "36bc34ed",
    "metadata": {},
    "outputs": [
@@ -753,33 +825,20 @@
    "id": "a65bd543",
    "metadata": {},
    "source": [
-    "2.4. Визуализация данных в Matplotlib"
+    "##**2.4.** Визуализация данных в Matplotlib"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "6e73d7cc",
+   "cell_type": "markdown",
+   "id": "7f0b6e53",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Папка для графиков создана: D:\\AI_Courses\\homeworks\\HW02\\figures\n"
-     ]
-    }
-   ],
    "source": [
-    "# Создание папки для графиков если её нет\n",
-    "figures_directory = \"D:\\\\AI_Courses\\\\homeworks\\\\HW02\\\\figures\"\n",
-    "os.makedirs(figures_directory, exist_ok=True)\n",
-    "print(f\"Папка для графиков создана: {figures_directory}\")"
+    "###**1. Гистограмма для возраста**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "5ad4fa4d",
    "metadata": {},
    "outputs": [
@@ -803,7 +862,7 @@
     }
    ],
    "source": [
-    "# 1. Гистограмма для возраста\n",
+    "# Гистограмма для возраста\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.hist(df_homework['age'].dropna(), bins=15, color='skyblue', edgecolor='black', alpha=0.7)\n",
     "plt.title('Распределение возраста пользователей', fontsize=14, fontweight='bold')\n",
@@ -820,8 +879,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "810bc563",
+   "metadata": {},
+   "source": [
+    "###**2. Боксплот для выручки по странам**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "629e1f87",
    "metadata": {},
    "outputs": [
@@ -853,7 +920,7 @@
     }
    ],
    "source": [
-    "# 2. Боксплот для выручки по странам\n",
+    "# Боксплот для выручки по странам\n",
     "plt.figure(figsize=(12, 7))\n",
     "df_homework_boxplot = df_homework[df_homework['revenue'] > 0]  # Исключаем нулевые значения для лучшей визуализации\n",
     "country_order_boxplot = df_homework_boxplot.groupby('country')['revenue'].median().sort_values(ascending=False).index\n",
@@ -875,8 +942,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "679ee984",
+   "metadata": {},
+   "source": [
+    "###**3. Scatter plot: покупки vs выручка**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "cb5f0dd8",
    "metadata": {},
    "outputs": [
@@ -900,7 +975,7 @@
     }
    ],
    "source": [
-    "# 3. Scatter plot: покупки vs выручка\n",
+    "# Scatter plot: покупки vs выручка\n",
     "plt.figure(figsize=(10, 7))\n",
     "\n",
     "# Создание цветовой схемы по странам\n",
