--- a/homeworks/HW02/HW02.ipynb
+++ b/homeworks/HW02/HW02.ipynb
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "5ad4fa4d",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Гистограмма сохранена как 'age_histogram.png'\n",
+      "Гистограмма Распределения возраста пользователей\n",
       "Комментарий: Распределение показывает концентрацию пользователей в возрасте 20-40 лет с несколькими выбросами\n"
      ]
     }
@@ -871,10 +871,10 @@
     "plt.grid(axis='y', alpha=0.3)\n",
     "\n",
     "# Сохранение графика\n",
-    "plt.savefig(f'{figures_directory}/age_histogram.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(f'{figure_path}/age_histogram.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
-    "print(\"Гистограмма сохранена как 'age_histogram.png'\")\n",
+    "print(\"Гистограмма Распределения возраста пользователей\")\n",
     "print(\"Комментарий: Распределение показывает концентрацию пользователей в возрасте 20-40 лет с несколькими выбросами\")"
    ]
   },
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "629e1f87",
    "metadata": {},
    "outputs": [
@@ -896,7 +896,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ivans\\AppData\\Local\\Temp\\ipykernel_30620\\1600977100.py:8: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\ivans\\AppData\\Local\\Temp\\ipykernel_30620\\4029384112.py:8: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  plt.boxplot(boxplot_data, labels=country_order_boxplot)\n"
      ]
     },
@@ -914,7 +914,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Боксплот сохранен как 'revenue_by_country_boxplot.png'\n",
+      "Диаграмма Распределения выручки по странам\n",
       "Комментарий: Германия показывает самые высокие медианные значения выручки, в то время как в США наибольший разброс\n"
      ]
     }
@@ -934,10 +934,10 @@
     "plt.grid(axis='y', alpha=0.3)\n",
     "\n",
     "# Сохранение графика\n",
-    "plt.savefig(f'{figures_directory}/revenue_by_country_boxplot.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(f'{figure_path}/revenue_by_country_boxplot.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
-    "print(\"Боксплот сохранен как 'revenue_by_country_boxplot.png'\")\n",
+    "print(\"Диаграмма Распределения выручки по странам\")\n",
     "print(\"Комментарий: Германия показывает самые высокие медианные значения выручки, в то время как в США наибольший разброс\")"
    ]
   },
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "cb5f0dd8",
    "metadata": {},
    "outputs": [
@@ -969,7 +969,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scatter plot сохранен как 'purchases_vs_revenue_scatter.png'\n",
+      "Диаграмма Зависимости выручки от количества покупок\n",
       "Комментарий: Наблюдается положительная корреляция между количеством покупок и выручкой, но с существенным разбросом\n"
      ]
     }
@@ -995,10 +995,10 @@
     "plt.grid(alpha=0.3)\n",
     "\n",
     "# Сохранение графика\n",
-    "plt.savefig(f'{figures_directory}/purchases_vs_revenue_scatter.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(f'{figure_path}/purchases_vs_revenue_scatter.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
-    "print(\"Scatter plot сохранен как 'purchases_vs_revenue_scatter.png'\")\n",
+    "print(\"Диаграмма Зависимости выручки от количества покупок\")\n",
     "print(\"Комментарий: Наблюдается положительная корреляция между количеством покупок и выручкой, но с существенным разбросом\")"
    ]
   }
