--- a/homeworks/HW02/HW02.ipynb
+++ b/homeworks/HW02/HW02.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "60db2452",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "e9227d2f",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "d5b50904",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "9       10   24.0      RU          7      511"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "id": "79bb63f8",
    "metadata": {},
    "outputs": [
@@ -253,17 +253,16 @@
       "Информация о датасете:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 41 entries, 0 to 40\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column     Non-Null Count  Dtype   \n",
-      "---  ------     --------------  -----   \n",
-      " 0   user_id    41 non-null     int64   \n",
-      " 1   age        39 non-null     float64 \n",
-      " 2   country    41 non-null     object  \n",
-      " 3   purchases  41 non-null     int64   \n",
-      " 4   revenue    41 non-null     int64   \n",
-      " 5   age_group  38 non-null     category\n",
-      "dtypes: category(1), float64(1), int64(3), object(1)\n",
-      "memory usage: 2.0+ KB\n"
+      "Data columns (total 5 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   user_id    41 non-null     int64  \n",
+      " 1   age        39 non-null     float64\n",
+      " 2   country    41 non-null     object \n",
+      " 3   purchases  41 non-null     int64  \n",
+      " 4   revenue    41 non-null     int64  \n",
+      "dtypes: float64(1), int64(3), object(1)\n",
+      "memory usage: 1.7+ KB\n"
      ]
     }
    ],
@@ -282,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "id": "9d7bb2a9",
    "metadata": {},
    "outputs": [
@@ -393,7 +392,7 @@
        "max    40.000000  120.000000  11.000000  2475.000000"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "1558c2ba",
    "metadata": {},
    "outputs": [
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "id": "e7221d42",
    "metadata": {},
    "outputs": [
@@ -465,9 +464,9 @@
       "Анализ дублирующих строк:\n",
       "Количество полных дубликатов: 1\n",
       "Дублирующие строки:\n",
-      "    user_id   age country  purchases  revenue age_group\n",
-      "9        10  24.0      RU          7      511     18-30\n",
-      "40       10  24.0      RU          7      511     18-30\n"
+      "    user_id   age country  purchases  revenue\n",
+      "9        10  24.0      RU          7      511\n",
+      "40       10  24.0      RU          7      511\n"
      ]
     }
    ],
@@ -493,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "af3be757",
    "metadata": {},
    "outputs": [
@@ -536,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "id": "2f9699d8",
    "metadata": {},
    "outputs": [
@@ -586,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "id": "92320590",
    "metadata": {},
    "outputs": [
@@ -630,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "id": "8fbbca28",
    "metadata": {},
    "outputs": [
@@ -672,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "id": "5b91d87c",
    "metadata": {},
    "outputs": [
@@ -722,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "id": "8093016b",
    "metadata": {},
    "outputs": [
@@ -745,7 +744,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ivans\\AppData\\Local\\Temp\\ipykernel_30620\\509258514.py:9: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\ivans\\AppData\\Local\\Temp\\ipykernel_17080\\509258514.py:9: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  age_group_analysis = df_homework.groupby('age_group').agg({\n"
      ]
     }
@@ -780,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "id": "36bc34ed",
    "metadata": {},
    "outputs": [
@@ -838,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "id": "5ad4fa4d",
    "metadata": {},
    "outputs": [
@@ -888,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "629e1f87",
    "metadata": {},
    "outputs": [
@@ -896,7 +895,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ivans\\AppData\\Local\\Temp\\ipykernel_30620\\4029384112.py:8: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\ivans\\AppData\\Local\\Temp\\ipykernel_17080\\3909177854.py:8: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  plt.boxplot(boxplot_data, labels=country_order_boxplot)\n"
      ]
     },
@@ -951,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "id": "cb5f0dd8",
    "metadata": {},
    "outputs": [
@@ -995,7 +994,7 @@
     "plt.grid(alpha=0.3)\n",
     "\n",
     "# Сохранение графика\n",
-    "plt.savefig(f'{figure_path}/purchases_vs_revenue_scatter.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(f'{figure_path}/Purchases_vs_revenue_scatter.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "print(\"Диаграмма Зависимости выручки от количества покупок\")\n",
