--- a/homeworks/HW02/HW02.ipynb
+++ b/homeworks/HW02/HW02.ipynb
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "cb5f0dd8",
    "metadata": {},
    "outputs": [
@@ -994,7 +994,7 @@
     "plt.grid(alpha=0.3)\n",
     "\n",
     "# Сохранение графика\n",
-    "plt.savefig(f'{figure_path}/Purchases_vs_revenue_scatter.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(f'{figure_path}/purchases_vs_revenue.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "print(\"Диаграмма Зависимости выручки от количества покупок\")\n",
