--- a/homeworks/HW02/HW02.ipynb
+++ b/homeworks/HW02/HW02.ipynb
@@ -744,7 +744,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ivans\\AppData\\Local\\Temp\\ipykernel_17080\\509258514.py:9: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\ivans\\AppData\\Local\\Temp\\ipykernel_27448\\509258514.py:9: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  age_group_analysis = df_homework.groupby('age_group').agg({\n"
      ]
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "629e1f87",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ivans\\AppData\\Local\\Temp\\ipykernel_17080\\3909177854.py:8: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\ivans\\AppData\\Local\\Temp\\ipykernel_27448\\4029384112.py:8: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  plt.boxplot(boxplot_data, labels=country_order_boxplot)\n"
      ]
     },
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "cb5f0dd8",
    "metadata": {},
    "outputs": [
@@ -999,6 +999,24 @@
     "\n",
     "print(\"Диаграмма Зависимости выручки от количества покупок\")\n",
     "print(\"Комментарий: Наблюдается положительная корреляция между количеством покупок и выручкой, но с существенным разбросом\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0008ccc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, World!\")"
    ]
   }
  ],
